# students-project-distributor

./: .gitignore  Dockerfile  README.md  index.html  processor.py  pyproject.toml
.github/workflows/: docker.yml
be/: README.md  main.py  processor.py  requirements.txt  tsv_validator.py
deploy/nginx/: app.conf
deploy/supervisor/: supervisord.conf
examples/: dist_case_full_mix.tsv  dist_duplicates_edges.tsv  dist_random_vs_correct.tsv
fe/: index.html
fe/scripts/: main.js
fe/styles/: style.css
scripts/: main.js
styles/: style.css
