[project]
name = "students-project-distributor"
version = "0.1.0"
description = ""
authors = [
    {name = "gouzhurou",email = "arlantamom1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
